--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </button>
             <button>
                 <img src="./assets/img/github.png" alt="">
-                <p>y</p>
+                <p></p>
             </button>
             <button>
                 <img src="./assets/img/github.png" alt="">
@@ -35,11 +35,11 @@
         <div class="text-header-1">
             <div class="test-header-1" id="text-1">
                 <img src="./assets/img/github.png" alt="">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, consectetur vitae? Veniam labore expedita maxime deleniti eligendi esse reprehenderit enim..</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, consectetur vitae? Veniam labore expedita maxime ..</p>
             </div>
 
             <div class="test-header-2" id="text-2">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis incidunt quos, perferendis dolor veniam debitis?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis incidunt quois?</p>
             </div>
 
             <div class="test-header-1" id="text-1">
@@ -52,7 +52,7 @@
             </div>
 
             <div class="box">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ullam illum optio quae tenetur esse aliquid, debitis</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ullam illum </p>
             </div>
 
     <div class="rowimage">
